<resources>

    <string name="stor_static_api_url" translatable="false">https://api.hypothermic.nl</string>

    <string name="app_name">Meefietsen</string>

    <string name="title_home">Home</string>
    <string name="title_friends">Contacts</string>
    <string name="title_account">Account</string>

    <!-- Strings related to login -->
    <string name="activity_login_welkom">Welcome</string>
    <string name="activity_login_introduction">Meefietsen is an app to easily arrange cycle ride-alongs with friends.</string>
    <string name="activity_login_instruction">Please enter your phone number.</string>
    <string name="activity_login_proceed">Proceed</string>
    <string name="activity_login_login">Login</string>
    <string name="activity_login_login_instruction">Please enter your password</string>
    <string name="activity_register_title">Register</string>
    <string name="activity_register_instructions">Enter an unique password that consists of 8 characters:</string>
    <string name="activity_register_proceed">Finish registration</string>
    <string name="activity_register_legal">By registering, you agree to the <font color="blue">MeefietsApp Servicevoorwaarden</font> and <font color="blue">Hypothermic TOS</font>. You also acknowledge that you are 16 years or older. <i>Click to open accosiated documents</i></string>
    <string name="stor_static_tos_url" translatable="false">https://www.hypothermic.nl/meefietsen/tos.html</string>
    <string name="activity_verify_title">Verify Account</string>
    <string name="activity_verify_introduction">A text message was sent to your phone number, enter the 6-number verification code below:</string>
    <string name="activity_verify_proceed">Finish verification</string>
    <string name="dialog_std_inputsmalltext_title">Enter value</string>
    <string name="dialog_std_inputsmalltext_positive">OK</string>
    <string name="dialog_std_inputsmalltext_negative">Cancel</string>
    <string name="activity_account_manage_name_title">Change your username</string>
    <string name="interact_contacts_add_incorrect_number">Incorrect phone number.</string>
    <string name="interact_contacts_update_failed">Failed to retrieve contacts</string>
    <string name="interact_contacts_add_error">Error when adding contact.</string>
    <string name="interact_events_invite_error">Failed to invite contact to the event.</string>
    <string name="interact_events_invite_success">Successfully added user to event.</string>
    <string name="dialog_std_userinvite_title">Invite a user</string>
    <string name="dialog_std_userinvite_positive">Invite</string>
    <string name="dialog_std_userinvite_negative">Cancel</string>
    <string name="dialog_std_userinvite_field_number">Phone number</string>
    <string name="dialog_std_contactadd_title">Add contact</string>
    <string name="dialog_std_contactadd_positive">Add</string>
    <string name="dialog_std_contactadd_negative">Cancel</string>
    <string name="dialog_std_contactadd_field_number">Phone number</string>
    <string name="dialog_std_serverunreachable_title">Server not reachable</string>
    <string name="dialog_std_serverunreachable_positive">Exit</string>
    <string name="dialog_std_serverunreachable_negative">Ignore</string>
    <string name="interact_events_delete_error">Failed to delete event</string>
    <string name="interact_events_delete_success">Successfully deleted event.</string>

</resources>
