<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_login_welcome_back_bm"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:background="#ffffffff"
        android:orientation="vertical"
        android:weightSum="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/strRegisterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:text="@string/activity_register_title"
            android:textAlignment="center"
            android:textColor="@color/colorTextB"
            android:textSize="34sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/seperator3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:shadowDx="-3"
            android:shadowDy="3"
            android:shadowRadius="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strWelcomeTitle" />

        <TextView
            android:id="@+id/strRegisterInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="11dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/activity_register_instructions"
            android:textAlignment="center"
            android:textColor="@color/colorTextB"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/fieldRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/strRegisterLegal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:autoLink="web"
            android:text="@string/activity_register_legal"
            android:textAlignment="center"
            android:textColor="@color/colorTextG"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_register_proceed"
            android:textAlignment="center" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>