<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_login_welcome_back_bm"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="132dp"
        android:background="#ffffffff"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/strLoginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/activity_login_login"
            android:textAlignment="center"
            android:textColor="@color/colorTextB"
            android:textSize="34sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/seperator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:shadowDx="-3"
            android:shadowDy="3"
            android:shadowRadius="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strWelcomeTitle" />

        <TextView
            android:id="@+id/strLoginInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="11dp"
            android:layout_marginRight="8dp"
            android:text="@string/activity_login_login_instruction"
            android:textAlignment="center"
            android:textColor="@color/colorTextB"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/fieldLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLoginProceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_proceed" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>