<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_login_welcome_back_bm"
    tools:context=".VerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="132dp"
        android:background="#ffffff"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/strVerifyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:text="@string/activity_verify_title"
            android:textAlignment="center"
            android:textColor="@color/colorTextB"
            android:textSize="34sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/seperator4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:shadowDx="-3"
            android:shadowDy="3"
            android:shadowRadius="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strVerifyTitle" />

        <TextView
            android:id="@+id/strVerifyIntroduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_verify_introduction"
            android:textAlignment="center"
            android:textColor="@color/colorTextB"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.github.pinball83.maskededittext.MaskedEditText
                android:id="@+id/fieldVerifyNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textNoSuggestions|numberSigned"
                android:textAlignment="textStart"
                android:textColor="@color/colorTextB"
                app:mask="*****"
                app:maskIcon="@drawable/ic_sms_black_24dp"
                app:maskIconColor="@color/colorPrimary"
                app:notMaskedSymbol="*" />

        </LinearLayout>

        <Button
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_verify_proceed"
            android:textAlignment="center" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
